Fix awkward subhead wrapping

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -106,6 +106,8 @@ h3 {
     font-weight: 400;
     color: var(--gray-med);
     margin: 0;
+    max-width: 100%;
+    white-space: nowrap;
   }
 }
 
